# rubix-cli

./: .gitignore  README.md  main.py  pyproject.toml
rubix_cli/: cli.py  commands.py
rubix_cli/core/: __init__.py  commander.py  consts.py  serial_tty.py
rubix_cli/core/cli/: __init__.py  cli_command_base.py
rubix_cli/core/commands/: __init__.py  cat_command.py  cat_repl_command.py  command_base.py  flash_command.py  get_file_command.py  get_rtc_command.py  ls_command.py  mkdir_command.py  purge_command.py  reboot_command.py  rm_command.py  rmdir_command.py  set_rtc_command.py  uname_command.py  upload_file_command.py
rubix_cli/core/snippets/: __init__.py  snippet_ls.py
rubix_cli/core/utils/: __init__.py  common.py  logger.py
rubix_cli/snippets/: __init__.py  filesystem_snippets.py  flash_snippets.py  snippet_base.py  snippet_flash_file.py  snippet_get_file.py  snippet_get_rtc.py  snippet_ls.py  snippet_mkdir.py  snippet_purge.py  snippet_rm.py  snippet_rmdir.py  snippet_set_rtc.py  snippet_uname.py  snippet_upload_file.py  system_snippets.py
rubix_cli/snippets/templates/: cat_file.py-snippet  flash.py-snippet  get_file.py-snippet  get_rtc.py-snippet  list_files.py.snippet  ls.py-snippet  ls.py.snippet  mkdir.py-snippet  mkdir.py.snippet  purge.py-snippet  rm.py-snippet  rm.py.snippet  rmdir.py-snippet  rmdir.py.snippet  set_rtc.py-snippet  uname.py-snippet  upload_file.py-snippet
tests/: conftest.py  modules.py  utils.py
tests/functional/: test_filesystem_commands.py  test_system_commands.py
tests/mocks/flash_mocks/: .flashignore
(+5 files in other folders)
