
[build-system]
requires = ["setuptools==70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*", "requirements*"]

[project]
name = "rubix-cli"
version = "1.0.0"
authors = [
  { name = "zNitche" },
]
description = "command line tools for interacting with MCUs running MicroPython"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[project.scripts]
rubix-cli = "rubix_cli.cli:run"

[project.urls]
Homepage = "https://github.com/zNitche/rubix-cli"
Issues = "https://github.com/zNitche/rubix-cli/issues"
